# AutoGaitA

./: .gitignore  CITATION.cff  README.md  __init__.py  __main__.py  autogaita.py  autogaita_dlc.py  autogaita_dlc_gui.py  autogaita_group.py  autogaita_group_gui.py  autogaita_simi.py  autogaita_simi_gui.py  autogaita_utils.py  pyproject.toml  pytest.ini  setup.py
annotation tables/: README.md  Simi Annotation Table Example.xlsx  Simi Annotation Table Template.xlsx  Universal 3D Annotation Table Template.xlsx
autocycla/: README.md
autogaita/: __init__.py  __main__.py  autogaita.py  autogaita_3D_preparation.py  autogaita_dlc.py  autogaita_dlc_gui.py  autogaita_group.py  autogaita_group_gui.py  autogaita_simi.py  autogaita_simi_gui.py  autogaita_sleap.py  autogaita_universal3D_gui.py  autogaita_universal3D_preparation.py  autogaita_utils.py  dlc_gui_config.json  group_gui_config.json  rename_cols_simiprep.py  simi_gui_config.json  universal3D_gui_config.json
autogaita.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
batchrun_scripts/: autogaita_dlc_multirun.py  autogaita_dlc_singlerun.py  autogaita_group_dlcrun.py  autogaita_group_simirun.py  autogaita_simi_multirun.py  autogaita_simi_singlerun.py
example data/: README.md
res/: autogaita_icon.icns
src/: autogaita.py  autogaita_dlc_gui.py  autogaita_group.py  autogaita_simi.py
tests/: dlc_approval_test.py  group_approval_test.py  notyet_test_dlc_unit1_preparation.py  simi_approval_test.py  test_3D_unit.py  test_common2D_unit_1_preparation.py  test_common2D_unit_2_sc_extraction.py  test_dlc_unit.py  (+19 more)
(+214 files in other folders)
